--- a/Boilerplate/App_Themes/Boilerplate/Global/sfnormalize.css
+++ b/Boilerplate/App_Themes/Boilerplate/Global/sfnormalize.css
@@ -1,85 +1,635 @@
 ﻿/*!
  * ============================================================================ 
- * SF|Boilerplated based on H5BP v4.0.2 | sfnormalize.css
+ * SF|Boilerplated based on H5BP v4.2.0 | sfnormalize.less
  * ============================================================================ 
  */
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block}
-html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}
-body,figure,form,button,input,select,textarea{margin:0}
-html,button,input,select,textarea{color:#222;font-family:sans-serif;_font-family:sans-serif}
-body,code,kbd,pre,samp,address,caption,cite,code,dfn,th,var{font-size:1em;font-style:normal;font-weight:normal;line-height:1.4em}
-code,kbd,pre,samp{color:#222;font-family:monospace,serif;_font-family:'courier new',monospace}
-a,a:visited{color:#105cb6}
-a:active,a:hover,a:focus{color:#065bc0}
-hr{border:0;border-top:1px solid #ccc;display:block;height:1px;margin:1em 0;padding:0}
-mark{background:#ff0;color:#000}
-audio,canvas,video{display:inline-block;*display:inline;*zoom:1}
-audio:not([controls]){display:none;height:0}
-a:focus{outline:thin dotted}
-abbr[title]{border-bottom:1px dotted}
-body:focus,div:focus,fieldset:focus,span:focus,li:focus,p:focus,a:active,a:hover{outline:0}
-b,strong{font-weight:bold}
-blockquote{margin:1em 40px}
-dfn{font-style:italic}
-dl,menu,ol,ul{margin:1em 0}
-dd,menu,ol,ul{padding:0 0 0 40px}
-fieldset{border:0;margin:0;padding:0}
-img{border:0;-ms-interpolation-mode:bicubic;vertical-align:middle}
-legend{border:0;*margin-left:-7px;padding:0;white-space:normal}
-nav ul,nav ol{list-style:none;list-style-image:none}
-p,pre{margin:1em 0}
-pre{white-space:pre;white-space:pre-wrap;-ms-word-wrap:break-word;word-wrap:break-word}
-q{quotes:none}
-q:before,q:after{content:'';content:none}
-small{font-size:80%}
-sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
-sup{top:-0.5em}
-sub{bottom:-0.25em}
-table{border-collapse:collapse;border-spacing:0}
-textarea{overflow:auto;resize:vertical;vertical-align:top}
-button,input,select,textarea{font-size:100%;line-height:normal;vertical-align:baseline;*vertical-align:middle}
-button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;*overflow:visible}
-button[disabled],input[disabled]{cursor:default}
-input[type="checkbox"],input[type="radio"]{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;*height:13px;padding:0;*width:13px}
-input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}
-input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}
-button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}
-::-moz-selection{background:#b3d4fc;-webkit-text-shadow:none;text-shadow:none}
-::selection{background:#b3d4fc;-webkit-text-shadow:none;text-shadow:none}
-svg:not(:root){overflow:hidden}
-[hidden]{display:none}
-.sf_cols{margin:0;padding:0;width:100%;zoom:1}
-.sf_cols:before,.sf_cols:after{content:"";display:table}
-.sf_cols:after{clear:both}
-.sf_colsOut+.sf_colsOut{*margin-left:-1px!important}
-.sf_block{display:block}
-.sf_1col_1_100{float:none;margin:0}
-.sf_5cols_1_20,.sf_5cols_2_20,.sf_5cols_3_20,.sf_5cols_4_20,.sf_5cols_5_20{float:left;margin:0;width:20%}
-.sf_2cols_1_25,.sf_3cols_1_25,.sf_4cols_1_25,.sf_4cols_2_25,.sf_4cols_3_25,.sf_4cols_4_25,.sf_3cols_3_25{float:left;margin:0;width:25%}
-.sf_2cols_2_25{float:right;margin:0;width:25%}
-.sf_3cols_1_33,.sf_3cols_3_33,.sf_2cols_1_33{float:left;margin:0;width:33%}
-.sf_2cols_2_33{float:right;margin:0;width:33%}
-.sf_3cols_2_34{float:left;margin:0;width:34%}
-.sf_3cols_2_50,.sf_2cols_1_50{float:left;margin:0;width:50%}
-.sf_2cols_2_50{float:right;margin:0;width:50%}
-.sf_2cols_1_67{float:left;margin:0;width:67%}
-.sf_2cols_2_67{float:right;margin:0;width:67%}
-.sf_2cols_1_75{float:left;margin:0;width:75%}
-.sf_2cols_2_75{float:right;margin:0;width:75%}
-.sf_2cols_2_75 .sf_2cols_2in_75,.sf_2cols_2_67 .sf_2cols_2in_67,.sf_2cols_2_50 .sf_2cols_2in_50,.sf_2cols_2_33 .sf_2cols_2in_33,.sf_2cols_2_25 .sf_2cols_2in_25,.sf_3cols_2_34 .sf_3cols_2in_34,.sf_3cols_3_33 .sf_3cols_3in_33,.sf_3cols_2_50 .sf_3cols_2in_50,.sf_3cols_3_25 .sf_3cols_3in_25,.sf_4cols_2_25 .sf_4cols_2in_25,.sf_4cols_3_25 .sf_4cols_3in_25,.sf_4cols_4_25 .sf_4cols_4in_25,.sf_5cols_2_20 .sf_5cols_2in_20,.sf_5cols_3_20 .sf_5cols_3in_20,.sf_5cols_4_20 .sf_5cols_4in_20,.sf_5cols_5_20 .sf_5cols_5in_20{margin-left:12px}
-.sf_3cols_3_25,.sf_3cols_3_33,.sf_4cols_4_25,.sf_5cols_5_20{_margin-left:-1px!important}
-.sfLbl{display:block;font-weight:bold;margin-bottom:10px}
-.sfClearfix:before,.sfClearfix:after,.sfprofileArticleLikeWrp:before,.sfprofileArticleLikeWrp:after,.sfprofileListLikeWrp:before,.sfprofileListLikeWrp:after{content:"";display:table}
-.sfClearfix:after,.sfprofileArticleLikeWrp:after,.sfprofileListLikeWrp:after{clear:both}
-.sfClearfix,.sfprofileArticleLikeWrp,.sfprofileListLikeWrp{zoom:1}
-.sfDisplayNone{display:none}
-.clearfix:before,.clearfix:after{content:"";display:table}
-.clearfix:after{clear:both}
-body.standard.sfPageEditor.zeContentMode div#ScriptWrapper{background:#ff0;display:block;-moz-opacity:.4;opacity:.4}
-.ScriptWrapper,.sfDisplayNone{display:none}
-.sfimageWrp{overflow-x:hidden}
-.sfimageWrp img,.sfContentBlock img{height:auto;max-width:100%;width:auto}
-@media print{body{background-color:#fff;min-width:0}
-.sfPublicWrapper{width:auto}
-.sfPageBrowseAndEditToolbarWrp,.sfPrintBtn{display:none}
+/* #region less variables and mixins */
+/*  -----------------------------------------------------------------------*/
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+/* #region normalization and reset styles */
+/*  ------------------------------------------------------------------------*/
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block;
 }
+audio,
+canvas,
+video {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+}
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+[hidden] {
+  display: none;
+}
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  font-size: 100%;
+}
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+form,
+fieldset,
+input,
+textarea,
+p,
+blockquote,
+th,
+td {
+  margin: 0;
+  padding: 0;
+}
+body:focus,
+div:focus,
+fieldset:focus,
+span:focus,
+li:focus,
+p:focus,
+a,
+a:active,
+a:hover {
+  outline: 0;
+}
+abbr,
+acronym,
+fieldset,
+img {
+  border: 0;
+}
+address,
+caption,
+cite,
+code,
+dfn,
+th,
+var {
+  font-weight: normal;
+  font-style: normal;
+}
+caption,
+th {
+  text-align: left;
+}
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+b,
+strong {
+  font-weight: bold;
+}
+blockquote {
+  margin: 1em 40px;
+}
+dfn {
+  font-style: italic;
+}
+img {
+  -ms-interpolation-mode: bicubic;
+  border: 0;
+  vertical-align: middle;
+}
+a:focus {
+  outline: thin dotted;
+}
+p,
+pre {
+  margin: 1em 0;
+}
+pre {
+  white-space: pre-wrap;
+  white-space: pre;
+  -ms-word-wrap: break-word;
+  word-wrap: break-word;
+}
+q {
+  quotes: none;
+}
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+small {
+  font-size: 80%;
+}
+sub,
+sup {
+  position: relative;
+  vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
+dl {
+  margin: 1em 0;
+}
+dd,
+menu,
+ol,
+ul {
+  margin: 0 0 0 40px;
+}
+nav ul,
+nav ol {
+  list-style: none;
+  list-style-image: none;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+figure,
+form {
+  margin: 0;
+}
+legend {
+  *margin-left: -7px;
+  padding: 0;
+  border: 0;
+  white-space: normal;
+}
+button,
+input,
+select,
+textarea {
+  margin: 0;
+  vertical-align: baseline;
+  *vertical-align: middle;
+  font-size: 100%;
+}
+button,
+input {
+  line-height: normal;
+}
+button,
+select {
+  text-transform: none;
+}
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  *overflow: visible;
+  cursor: pointer;
+}
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  *width: 13px;
+  *height: 13px;
+}
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+textarea {
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
+}
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+/* #region typography and color defaults */
+/*  ------------------------------------------------------------------------*/
+html,
+button,
+input,
+select,
+textarea {
+  color: #222222;
+  font-family: sans-serif;
+}
+::-moz-selection,
+::selection {
+  background: #b3d4fc;
+  -webkit-text-shadow: none;
+  text-shadow: none;
+}
+mark {
+  background: #ffff00;
+  color: #000000;
+}
+fieldset {
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+  border: 1px solid #c0c0c0;
+}
+hr {
+  display: block;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+  margin: 1em 0;
+  padding: 0;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+}
+/*  ------------------------------------------------------------------------*/
+body {
+  font-size: 1em;
+  line-height: 1.4em;
+}
+code,
+kbd,
+pre,
+samp {
+  font-size: 1em;
+  font-family: monospace, serif;
+  _font-family: 'courier new', monospace;
+}
+h1 {
+  margin: 0.67em 0;
+  font-size: 2em;
+}
+h2 {
+  margin: 0.83em 0;
+  font-size: 1.5em;
+}
+h3 {
+  margin: 1em 0;
+  font-size: 1.17em;
+}
+h4 {
+  margin: 1.33em 0;
+  font-size: 1em;
+}
+h5 {
+  margin: 1.67em 0;
+  font-size: 0.83em;
+}
+h6 {
+  margin: 2.33em 0;
+  font-size: 0.67em;
+}
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+/* #region sitefinity grid styles */
+/*  ------------------------------------------------------------------------*/
+.sf_cols {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  -ms-zoom: 1;
+  zoom: 1;
+}
+.sf_cols:before,
+.sf_cols:after {
+  display: table;
+  content: "";
+}
+.sf_cols:after {
+  clear: both;
+}
+.sf_colsOut + .sf_colsOut {
+  *margin-left: -1px !important;
+}
+.sf_block {
+  display: block;
+}
+.sf_1col_1_100 {
+  float: none;
+  margin: 0;
+}
+.sf_5cols_1_20,
+.sf_5cols_2_20,
+.sf_5cols_3_20,
+.sf_5cols_4_20,
+.sf_5cols_5_20 {
+  float: left;
+  margin: 0;
+  width: 20%;
+}
+.sf_2cols_1_25,
+.sf_3cols_1_25,
+.sf_4cols_1_25,
+.sf_4cols_2_25,
+.sf_4cols_3_25,
+.sf_4cols_4_25,
+.sf_3cols_3_25 {
+  float: left;
+  margin: 0;
+  width: 25%;
+}
+.sf_2cols_2_25 {
+  float: right;
+  margin: 0;
+  width: 25%;
+}
+.sf_3cols_1_33,
+.sf_3cols_3_33,
+.sf_2cols_1_33 {
+  float: left;
+  margin: 0;
+  width: 33%;
+}
+.sf_2cols_2_33 {
+  float: right;
+  margin: 0;
+  width: 33%;
+}
+.sf_3cols_2_34 {
+  float: left;
+  margin: 0;
+  width: 34%;
+}
+.sf_3cols_2_50,
+.sf_2cols_1_50 {
+  float: left;
+  margin: 0;
+  width: 50%;
+}
+.sf_2cols_2_50 {
+  float: right;
+  margin: 0;
+  width: 50%;
+}
+.sf_2cols_1_67 {
+  float: left;
+  margin: 0;
+  width: 67%;
+}
+.sf_2cols_2_67 {
+  float: right;
+  margin: 0;
+  width: 67%;
+}
+.sf_2cols_1_75 {
+  float: left;
+  margin: 0;
+  width: 75%;
+}
+.sf_2cols_2_75 {
+  float: right;
+  margin: 0;
+  width: 75%;
+}
+.sf_2cols_2_75 .sf_2cols_2in_75,
+.sf_2cols_2_67 .sf_2cols_2in_67,
+.sf_2cols_2_50 .sf_2cols_2in_50,
+.sf_2cols_2_33 .sf_2cols_2in_33,
+.sf_2cols_2_25 .sf_2cols_2in_25,
+.sf_3cols_2_34 .sf_3cols_2in_34,
+.sf_3cols_3_33 .sf_3cols_3in_33,
+.sf_3cols_2_50 .sf_3cols_2in_50,
+.sf_3cols_3_25 .sf_3cols_3in_25,
+.sf_4cols_2_25 .sf_4cols_2in_25,
+.sf_4cols_3_25 .sf_4cols_3in_25,
+.sf_4cols_4_25 .sf_4cols_4in_25,
+.sf_5cols_2_20 .sf_5cols_2in_20,
+.sf_5cols_3_20 .sf_5cols_3in_20,
+.sf_5cols_4_20 .sf_5cols_4in_20,
+.sf_5cols_5_20 .sf_5cols_5in_20 {
+  margin-left: 12px;
+}
+.sf_3cols_3_25,
+.sf_3cols_3_33,
+.sf_4cols_4_25,
+.sf_5cols_5_20 {
+  _margin-left: -1px !important;
+}
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+/* #region sitefinity and helper styles */
+/*  ------------------------------------------------------------------------*/
+body.standard.sfPageEditor.zeContentMode div#ScriptWrapper {
+  display: block;
+  background: #ffff00;
+  -moz-opacity: 0.4;
+  opacity: 0.4;
+  font-size: small;
+  text-align: center;
+}
+body.standard.sfPageEditor.zeContentMode div#ScriptWrapper:before {
+  content: "-- ONLY PLACE STYLE WIDGETS AND SCRIPT WIDGETS BELOW THIS AREA --";
+}
+.ScriptWrapper,
+.sfDisplayNone {
+  display: none;
+}
+.sfimageWrp {
+  overflow-x: hidden;
+}
+.sfimageWrp img,
+.sfContentBlock img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+.chromeframe {
+  margin: 0.2em 0;
+  padding: 0.2em 0;
+  background: #cccccc;
+  color: #000000;
+}
+.sfLbl {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+.sfClearfix:before,
+.sfClearfix:after,
+.sfprofileArticleLikeWrp:before,
+.sfprofileArticleLikeWrp:after,
+.sfprofileListLikeWrp:before,
+.sfprofileListLikeWrp:after {
+  display: table;
+  content: "";
+}
+.sfClearfix:after,
+.sfprofileArticleLikeWrp:after,
+.sfprofileListLikeWrp:after {
+  clear: both;
+}
+.sfClearfix,
+.sfprofileArticleLikeWrp,
+.sfprofileListLikeWrp {
+  -ms-zoom: 1;
+  zoom: 1;
+}
+.sfDisplayNone {
+  display: none;
+}
+.ir {
+  overflow: hidden;
+  border: 0;
+  background-color: transparent;
+  *text-indent: -9999px;
+}
+.ir:before {
+  display: block;
+  width: 0;
+  height: 150%;
+  content: "";
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+.visible {
+  visibility: visible;
+}
+.hidden {
+  display: none !important;
+  visibility: hidden;
+}
+.visuallyhidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  margin: -1px;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  border: 0;
+}
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  position: static;
+  overflow: visible;
+  clip: auto;
+  margin: 0;
+  width: auto;
+  height: auto;
+}
+.invisible {
+  visibility: hidden;
+}
+.clearfix:before,
+.clearfix:after {
+  display: table;
+  content: " ";
+}
+.clearfix:after {
+  clear: both;
+}
+.clearfix {
+  *zoom: 1;
+}
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+/*  ------------------------------------------------------------------------*/
+@media print {
+  * {
+    background: transparent !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    color: #000000 !important;
+    -webkit-text-shadow: none !important;
+    text-shadow: none !important;
+  }
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
+  abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
+  .ir a:after,
+  a[href^="javascript:"]:after,
+  a[href^="#"]:after {
+    content: "";
+  }
+  pre,
+  blockquote {
+    border: 1px solid #cccccc;
+    page-break-inside: avoid;
+  }
+  thead {
+    display: table-header-group;
+  }
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+  img {
+    max-width: 100% !important;
+  }
+  @page  {
+    margin: 0.5cm;
+  }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
+  .sfPublicWrapper {
+    width: auto;
+  }
+  .sfPageBrowseAndEditToolbarWrp,
+  .sfPrintBtn {
+    display: none;
+  }
+}
+/*  ------------------------------------------------------------------------*/
