--- a/Boilerplate/App_Themes/Boilerplate/Styles/fancybox.css
+++ b/Boilerplate/App_Themes/Boilerplate/Styles/fancybox.css
@@ -13,207 +13,33 @@
  *   http://www.opensource.org/licenses/mit-license.php
  *   http://www.gnu.org/licenses/gpl.html
  */
-#fancybox-loading {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	height: 40px;
-	width: 40px;
-	margin-top: -20px;
-	margin-left: -20px;
-	cursor: pointer;
-	overflow: hidden;
-	z-index: 1104;
-	display: none;
-}
-* html #fancybox-loading {	/* IE6 */
-	position: absolute;
-	margin-top: 0;
-}
-#fancybox-loading div {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 40px;
-	height: 480px;
-	background-image: url(../Images/fancybox.png);
-}
-#fancybox-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background: #000;
-	z-index: 7100;
-	display: none;
-}
-* html #fancybox-overlay {	/* IE6 */
-	position: absolute;
-	width: 100%;
-}
-#fancybox-tmp {
-	padding: 0;
-	margin: 0;
-	border: 0;
-	overflow: auto;
-	display: none;
-}
-#fancybox-wrap {
-	position: absolute;
-	top: 0;
-	left: 0;
-	margin: 0;
-	padding: 20px;
-	z-index: 7101;
-	display: none;
-}
-#fancybox-outer {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background: #FFF;
-}
-#fancybox-inner {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 1px;
-	height: 1px;
-	padding: 0;
-	margin: 0;
-	outline: none;
-	overflow: hidden;
-}
-#fancybox-hide-sel-frame {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: transparent;
-}
-#fancybox-close {
-	position: absolute;
-	top: -15px;
-	right: -15px;
-	width: 30px;
-	height: 30px;
-	background-image: url(../Images/fancybox.png);
-	background-position: -40px 0px;
-	cursor: pointer;
-	z-index: 1103;
-	display: none;
-}
-#fancybox_error {
-	color: #444;
-	font: normal 12px/20px Arial;
-	padding: 7px;
-	margin: 0;
-}
-#fancybox-content {
-	height: auto;
-	width: auto;
-	padding: 0;
-	margin: 0;
-}
-#fancybox-img {
-	width: 100%;
-	height: 100%;
-	padding: 0;
-	margin: 0;
-	border: none;
-	outline: none;
-	line-height: 0;
-	vertical-align: top;
-	-ms-interpolation-mode: bicubic;
-}
-#fancybox-frame {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	border: none;
-	display: block;
-}
-#fancybox-title {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	font-family: Arial;
-	font-size: 12px;
-	z-index: 1102;
-	
-	/* SF */
-	margin-top: 10px;
-	margin-left: -3px;
-	font-weight: bold;
-	line-height: 1.2;
-	color: #FFF;
-	background-color: #000;
-	border: 3px solid #fff;
-	padding: 15px 10px;
-	font-weight: normal !important;
-}
+#fancybox-loading { position: fixed; top: 50%; left: 50%; z-index: 1104; display: none; overflow: hidden; margin-top: -20px; margin-left: -20px; width: 40px; height: 40px; cursor: pointer; }
+* html #fancybox-loading { position: absolute; margin-top: 0; /* IE6 */ }
+    #fancybox-loading div { position: absolute; top: 0; left: 0; width: 40px; height: 480px; background-image: url(../Images/fancybox.png); }
+#fancybox-overlay { position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 7100; display: none; background: #000; }
+* html #fancybox-overlay { position: absolute; width: 100%; /* IE6 */ }
+#fancybox-tmp { display: none; overflow: auto; margin: 0; padding: 0; border: 0; }
+#fancybox-wrap { position: absolute; top: 0; left: 0; z-index: 7101; display: none; margin: 0; padding: 20px; }
+#fancybox-outer { position: relative; width: 100%; height: 100%; background: #FFF; }
+#fancybox-inner { position: absolute; top: 0; left: 0; overflow: hidden; margin: 0; padding: 0; width: 1px; height: 1px; outline: none; }
+#fancybox-hide-sel-frame { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: transparent; }
+#fancybox-close { position: absolute; top: -15px; right: -15px; z-index: 1103; display: none; width: 30px; height: 30px; background-image: url(../Images/fancybox.png); background-position: -40px 0px; cursor: pointer; }
+#fancybox_error { margin: 0; padding: 7px; color: #444; font: normal 12px/20px Arial; }
+#fancybox-content { margin: 0; padding: 0; width: auto; height: auto; }
+#fancybox-img { -ms-interpolation-mode: bicubic; margin: 0; padding: 0; width: 100%; height: 100%; outline: none; border: none; vertical-align: top; line-height: 0; }
+#fancybox-frame { position: relative; display: block; width: 100%; height: 100%; border: none; }
+#fancybox-title { position: absolute; bottom: 0; left: 0; z-index: 1102; margin-top: 10px; margin-left: -3px; padding: 15px 10px; border: 3px solid #fff; background-color: #000; color: #FFF; font-weight: bold; font-weight: normal !important; font-size: 12px; font-family: Arial; line-height: 1.2; /* SF */ }
 
-.fancybox-title-inside {
-	padding: 10px 0;
-	text-align: center;
-	color: #333;
-}
+.fancybox-title-inside { padding: 10px 0; color: #333; text-align: center; }
 
-.fancybox-title-outside {
-	padding-top: 5px;
-	color: #FFF;
-	text-align: center;
-	font-weight: bold;
-}
-#fancybox-left, #fancybox-right {
-	position: absolute;
-	bottom: 0px;
-	height: 100%;
-	width: 35%;
-	cursor: pointer;
-	outline: none;
-	background-image: url(../Images/blank.gif);
-	z-index: 1102;
-	display: none;
-}
-#fancybox-left {
-	left: 0;
-}
-#fancybox-right {
-	right: 0;
-}
-#fancybox-left-ico, #fancybox-right-ico {
-	position: absolute;
-	top: 50%;
-	left: -9999px;
-	width: 30px;
-	height: 30px;
-	margin-top: -15px;
-	cursor: pointer;
-	z-index: 1102;
-	display: block;
-}
-#fancybox-left-ico {
-	background-image: url(../Images/fancybox.png);
-	background-position: -40px -30px;
-}
-#fancybox-right-ico {
-	background-image: url(../Images/fancybox.png);
-	background-position: -40px -60px;
-}
-#fancybox-left:hover, #fancybox-right:hover {
-	visibility: visible;    /* IE6 */
-}
-#fancybox-left:hover span {
-	left: 20px;
-}
-#fancybox-right:hover span {
-	left: auto;
-	right: 20px;
-}
-.fancy-bg, #fancybox-title-left, #fancybox-title-right
-{
-    display: none;
-}
+.fancybox-title-outside { padding-top: 5px; color: #FFF; text-align: center; font-weight: bold; }
+#fancybox-left, #fancybox-right { position: absolute; bottom: 0px; z-index: 1102; display: none; width: 35%; height: 100%; outline: none; background-image: url(../Images/blank.gif); cursor: pointer; }
+#fancybox-left { left: 0; }
+#fancybox-right { right: 0; }
+#fancybox-left-ico, #fancybox-right-ico { position: absolute; top: 50%; left: -9999px; z-index: 1102; display: block; margin-top: -15px; width: 30px; height: 30px; cursor: pointer; }
+#fancybox-left-ico { background-image: url(../Images/fancybox.png); background-position: -40px -30px; }
+#fancybox-right-ico { background-image: url(../Images/fancybox.png); background-position: -40px -60px; }
+#fancybox-left:hover, #fancybox-right:hover { visibility: visible; /* IE6 */ }
+    #fancybox-left:hover span { left: 20px; }
+    #fancybox-right:hover span { right: 20px; left: auto; }
+.fancy-bg, #fancybox-title-left, #fancybox-title-right { display: none; }
