--- a/Boilerplate/App_Themes/Boilerplate/Styles/galleria.classic.css
+++ b/Boilerplate/App_Themes/Boilerplate/Styles/galleria.classic.css
@@ -1,38 +1,38 @@
-.galleria-container{height:400px;position:relative;overflow:hidden;background:#000;}
-.galleria-container img{-moz-user-select:none;-webkit-user-select:none;-o-user-select:none}
-.galleria-stage{position:absolute;top:10px;bottom:50px;left:10px;right:10px;overflow:hidden;}
-.galleria-thumbnails-container{height:40px;bottom:0;position:absolute;left:10px;right:10px;z-index:2;}
-.galleria-carousel .galleria-thumbnails-list{margin-left:30px;margin-right:30px;}
-.galleria-thumbnails .galleria-image{height:30px;width:50px;background:#000;margin:0 5px 0 0;border:1px solid #000;;float:left;cursor:pointer;}
-.galleria-counter{position:absolute;bottom:10px;left:10px;text-align:right;color:#fff;font:normal 11px/1 arial,sans-serif;z-index:2;}
-.galleria-loader{background:#000;width:20px;height:20px;position:absolute;top:10px;right:10px;z-index:2;display:none;background:url(../Images/classic-loader.gif) no-repeat 2px 2px;}
-.galleria-info{width:50%;top:15px;left:15px;z-index:2;position:absolute;}
-.galleria-info-text{background-color:#000;opacity: 0.5;filter: alpha(opacity=50);padding: 12px;display:none;}
-.galleria-info-title{font:bold 12px/1.1 arial,sans-serif;margin:0;color:#fff;}
-.galleria-info-description{font:italic 12px/1.4 georgia,serif;margin:0;color:#bbb;}
-.galleria-info-title+.galleria-info-description{margin-top:7px;}
-.galleria-info-close{width:9px;height:9px;position:absolute;top:5px;right:5px;background-position:-753px -11px;opacity:.5;cursor:pointer;display:none;}
-.galleria-info-link{background-position:-669px -5px;opacity:.8;position:absolute;width:20px;height:20px;cursor:pointer;background-color:#000;}
-.galleria-info-link:hover,
-.galleria-info-close:hover{opacity:.5;}
-.galleria-image-nav{position:absolute;top:50%;margin-top:-15px;width:100%;height:31px;left:0;}
+.galleria-container { position: relative; overflow: hidden; height: 400px; background: #000; }
+    .galleria-container img { -moz-user-select: none; -ms-user-select: none; -o-user-select: none; -webkit-user-select: none; user-select: none; }
+.galleria-stage { position: absolute; top: 10px; right: 10px; bottom: 50px; left: 10px; overflow: hidden; }
+.galleria-thumbnails-container { position: absolute; right: 10px; bottom: 0; left: 10px; z-index: 2; height: 40px; }
+.galleria-carousel .galleria-thumbnails-list { margin-right: 30px; margin-left: 30px; }
+.galleria-thumbnails .galleria-image {; float: left; margin: 0 5px 0 0; width: 50px; height: 30px; border: 1px solid #000; background: #000; cursor: pointer; }
+.galleria-counter { position: absolute; bottom: 10px; left: 10px; z-index: 2; color: #fff; text-align: right; font: normal 11px/1 arial,sans-serif; }
+.galleria-loader { position: absolute; top: 10px; right: 10px; z-index: 2; display: none; width: 20px; height: 20px; background: #000; background: url(../Images/classic-loader.gif) no-repeat 2px 2px; }
+.galleria-info { position: absolute; top: 15px; left: 15px; z-index: 2; width: 50%; }
+.galleria-info-text { display: none; padding: 12px; background-color: #000; opacity: 0.5; filter: alpha(opacity=50); }
+.galleria-info-title { margin: 0; color: #fff; font: bold 12px/1.1 arial,sans-serif; }
+.galleria-info-description { margin: 0; color: #bbb; font: italic 12px/1.4 georgia,serif; }
+.galleria-info-title + .galleria-info-description { margin-top: 7px; }
+.galleria-info-close { position: absolute; top: 5px; right: 5px; display: none; width: 9px; height: 9px; background-position: -753px -11px; opacity: .5; cursor: pointer; }
+.galleria-info-link { position: absolute; width: 20px; height: 20px; background-color: #000; background-position: -669px -5px; opacity: .8; cursor: pointer; }
+    .galleria-info-link:hover,
+    .galleria-info-close:hover { opacity: .5; }
+.galleria-image-nav { position: absolute; top: 50%; left: 0; margin-top: -15px; width: 100%; height: 31px; }
 .galleria-image-nav-left,
-.galleria-image-nav-right{opacity:.7;cursor:pointer;width:16px;height:31px;position:absolute;left:10px;z-index:2;}
-.galleria-image-nav-right{left:auto;right:10px;background-position:-300px 0;z-index:2;}
-.galleria-image-nav-left:hover,
-.galleria-image-nav-right:hover{opacity:.5;}
+.galleria-image-nav-right { position: absolute; left: 10px; z-index: 2; width: 16px; height: 31px; opacity: .7; cursor: pointer; }
+.galleria-image-nav-right { right: 10px; left: auto; z-index: 2; background-position: -300px 0; }
+    .galleria-image-nav-left:hover,
+    .galleria-image-nav-right:hover { opacity: .5; }
 .galleria-thumb-nav-left,
-.galleria-thumb-nav-right{cursor:pointer;display:none;background-position:-495px 0;border-right:1px solid #333;position:absolute;left:0;top:0;height:30px;width:23px;z-index:3;opacity:.8;}
-.galleria-thumb-nav-right{background-position:-578px 0;border-left:1px solid #333;border-right:none;right:0;left:auto;}
+.galleria-thumb-nav-right { position: absolute; top: 0; left: 0; z-index: 3; display: none; width: 23px; height: 30px; border-right: 1px solid #333; background-position: -495px 0; opacity: .8; cursor: pointer; }
+.galleria-thumb-nav-right { right: 0; left: auto; border-right: none; border-left: 1px solid #333; background-position: -578px 0; }
 .galleria-thumbnails-container .disabled,
-.galleria-thumbnails-container .disabled:hover{opacity:.2;cursor:default;}
+.galleria-thumbnails-container .disabled:hover { opacity: .2; cursor: default; }
 .galleria-thumb-nav-left:hover,
-.galleria-thumb-nav-right:hover{opacity:1;background-color:#111;}
+.galleria-thumb-nav-right:hover { background-color: #111; opacity: 1; }
 .galleria-carousel .galleria-thumb-nav-left,
-.galleria-carousel .galleria-thumb-nav-right{display:block;}
+.galleria-carousel .galleria-thumb-nav-right { display: block; }
 .galleria-thumb-nav-left,
 .galleria-thumb-nav-right,
 .galleria-info-link,
 .galleria-info-close,
 .galleria-image-nav-left,
-.galleria-image-nav-right{background-image:url(../Images/classic-map.png);background-repeat:no-repeat;}
+.galleria-image-nav-right { background-image: url(../Images/classic-map.png); background-repeat: no-repeat; }
