fix folder/file references for metadata

--- a/Bootstrap/App_Themes/Bootstrap/Global/sfnormalize.less
+++ b/Bootstrap/App_Themes/Bootstrap/Global/sfnormalize.less
@@ -113,7 +113,7 @@ h6 { margin: 2.33em 0; font-size: 0.67em; }
 body.standard.sfPageEditor.zeContentMode div#ScriptWrapper { display: block; background: @reset_mark-color-bg; -moz-opacity: 0.4; opacity: 0.4; font-size:small;text-align:center; }
 body.standard.sfPageEditor.zeContentMode div#ScriptWrapper:before { content:"-- ONLY PLACE STYLE WIDGETS AND SCRIPT WIDGETS BELOW THIS AREA --";}
 .ScriptWrapper, .sfDisplayNone { display: none; }
-.sfimageWrp { overflow-x: hidden; }
+.sfimageWrp { overflow: hidden; }
     .sfimageWrp img, .sfContentBlock img { max-width: 100%; width: auto; height: auto; }
 .chromeframe { margin: 0.2em 0; padding: 0.2em 0; background: @reset_color-hr; color: @reset_mark-color-fg; }
 .sfLbl { display: block; margin-bottom: 10px; font-weight: bold; }
