--- a/Bootstrap/App_Master/Bootstrap.master
+++ b/Bootstrap/App_Master/Bootstrap.master
@@ -32,15 +32,13 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
     <form id="aspnetForm" runat="server">
-        <telerik:RadScriptManager ID="RadScriptManager1" CompositeScript-ScriptMode="Release" EnableScriptGlobalization="True" EnableScriptLocalization="False" runat="server" CompositeScript-NotifyScriptLoaded="True" LoadScriptsBeforeUI="True">
+        <telerik:RadScriptManager ID="RadScriptManager1" CompositeScript-ScriptMode="Release" EnableScriptGlobalization="True" EnableScriptLocalization="False" runat="server" CompositeScript-NotifyScriptLoaded="True" LoadScriptsBeforeUI="True" OutputCompression="Forced">
             <CompositeScript>
                 <Scripts>
                     <asp:ScriptReference Name="MicrosoftAjax.js" Assembly="System.Web.Extensions" />
                     <asp:ScriptReference Name="MicrosoftAjaxWebForms.js" Assembly="System.Web.Extensions" />
                     <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" />
-                    <asp:ScriptReference Path="~/App_Data/Sitefinity/WebsiteTemplates/Bootstrap/JS/script.top.min.js" />
                     <asp:ScriptReference Name="Telerik.Sitefinity.Resources.Scripts.jquery-1.8.3.min.js" Assembly="Telerik.Sitefinity.Resources" />
-                    <asp:ScriptReference Name="Telerik.Sitefinity.Resources.Scripts.Kendo.kendo.all.min.js" Assembly="Telerik.Sitefinity.Resources" />
                     <asp:ScriptReference Path="~/App_Data/Sitefinity/WebsiteTemplates/Bootstrap/JS/bootstrap.min.js" />
                 </Scripts>
             </CompositeScript>
@@ -93,7 +91,7 @@
         <!-- no content below - scriptwrapper is purely for js or css widgets in sitefinity  -->
         <!--  ============================================================================== -->
         <div id="ScriptWrapper" clientidmode="static" runat="server" title="Only place scripts and styles in this region">
-            <script type="text/javascript" src="/sfv604100/Sitefinity/WebsiteTemplates/Bootstrap/JS/script.bottom.min.js"></script>
+            <script type="text/javascript" src="~/Sitefinity/WebsiteTemplates/Bootstrap/JS/script.bottom.min.js" defer="defer" async="async"></script>
             <asp:ContentPlaceHolder ID="cph_scriptsandstyles" runat="server" />
             <!--  ========================================================================== -->
         </div>
