Relocate sfnormalize.less / .css
Theme now imports sfnormalize.less to allow for one less request and
less /Global folder clutter

--- a/Twbs/App_Themes/twbs/Global/sfproject.less
+++ b/Twbs/App_Themes/twbs/Global/sfproject.less
@@ -1,18 +1,20 @@
 ﻿/*!
- * ============================================================================ 
- * SF|Boilerplated based on Twitter Bootstrap v3.0.0 | sfproject.less
- * ============================================================================ 
+ * =========================================================================== 
+ * SF|Boilerplated based on Bootstrap v3.0.0 | sfproject.less
+ * ===========================================================================
  */
- /*  -----------------------------------------------------------------------*/
-/* #region Bootstrap basic theme import                                     */
+
 /*  ------------------------------------------------------------------------*/
-@import "../LESS/theme.less";
+/* #region less variables and mixins */
+/*  -----------------------------------------------------------------------*/
+@import "../LESS/sfnormalize.less";
+@import "../LESS/bootstrap/theme.less";
 /*  ------------------------------------------------------------------------*/
 /* #endregion */
 /*  ------------------------------------------------------------------------*/
-/* #region Project stylesheet */
+/* #region content */
 /*  ------------------------------------------------------------------------*/
- 
+
 /*  ------------------------------------------------------------------------*/
 /* #endregion */
 /*  ------------------------------------------------------------------------*/
