fix: navbar-nav>active>a background color
Temporary patch for default theme nav-bar background color on active
element.
Already fixed in twbs Github, just not in release version

--- a/Twbs/App_Themes/twbs/LESS/bootstrap/theme.less
+++ b/Twbs/App_Themes/twbs/LESS/bootstrap/theme.less
@@ -99,7 +99,7 @@
   .box-shadow(@shadow);
 
   .navbar-nav > .active > a {
-    background-color: @navbar-default-bg;
+    background-color: @navbar-default-link-active-bg;
   }
 }
 .navbar-brand,
